force-app/main/default/staticresources/python/Disappear/src/objects/OrgUrl__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Allow Formula field to read URL for Org instead of hard coding - must use Hierarchy Custom Settings</description>
    <fields>
        <fullName>ContentURL__c</fullName>
        <description>ContentURL</description>
        <label>ContentURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OrgURL__c</fullName>
        <label>Org URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VfURL__c</fullName>
        <label>VF URL</label>
        <type>Url</type>
    </fields>
    <label>OrgUrl</label>
</CustomObject>